2004-04-14 Julien Puydt <julien.puydt@laposte.net>

	* src/calls_history_window.cpp: gtk_list_store_new was called
	with 7 arguments when only 6 where used.

2004-04-13 Julien Puydt <julien.puydt@laposte.net>

	* src/tools.h, src/tools.cpp, src/common.h: removed the calls history
	code;
	* src/calls_history_window.h, src/calls_history_window.cpp: put the
	calls history code, modified to use the get-a-widget-as-first-argument
	api;
	* src/config.cpp, src/endpoint.cpp, src/gnomemeeting.cpp,
	src/gnomemeeting.h, src/ldap_window.cpp, src/urlhandler.cpp: modified
	to cope with the new calls history api;
	* src/Makefile.am: added the calls_history_window.* files to the list
	of sources

2004-04-13 Julien Puydt <julien.puydt@laposte.net>

	* configure.in: made all Makefiles' creation unconditional. Fixes all
	dist* targets!
	* lib/Makefile.am: made it a little more readable.
	
2004-04-12 Kilian Krause <kk@verfaction.de>

	* src/chat_window.cpp, src/endpoint.cpp: The autoclear feature of the
	text chat was handled in src/endpoint.cpp. This patch basically moves
	it to src/chat_window.cpp. Patch provided by Julien Puydt
	<julien.puydt@laposte.net>.

2004-04-12 Kilian Krause <kk@verfaction.de>

	* src/log_window.cpp, src/log_window.h: missing files for previous
	commit. Argh ;)

2004-04-12 Kilian Krause <kk@verfaction.de>

	* src/callbacks.cpp, src/common.h, src/config.cpp, src/connection.cpp,
	src/endpoint.cpp, src/gatekeeper.cpp, src/gnomemeeting.cpp,
	src/ils.cpp, src/lid.cpp, src/log_window.cpp, src/log_window.h,
	src/Makefile.am, src/tools.cpp, src/tools.h, src/urlhandler.cpp,
	src/videograbber.cpp: reorganization of the existing code makes the
	log window fit the get-a-widget-as-first-argument api, and puts it in 
	a separate set of files.
	Patch provided by Julien Puydt <julien.puydt@laposte.net>. 

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-04-09 Kilian Krause <kk@verfaction.de>
